# wxBook

./: .gitignore  Debug.vcxproj  Debug.vcxproj.filters  build.bat  wxBook.sln
Debug/: config  test.txt
wxBook/: CMakeLists.txt  Config.cpp  Config.h  Main.cpp  Main.h  wxBook.vcxproj  wxBook.vcxproj.filters
wxBook/Debug/: vc141.idb
wxBook/Debug/wxBook.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  wxBook.lastbuildstate
wxBook/src/: BookFrame.cpp  BookFrame.h  Config.cpp  Config.h  Main.cpp  Main.h  Singleton.h  Utility.cpp  Utility.h
wxBook/x64/Debug/: vc141.idb
wxBook/x64/Debug/wxBook.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  wxBook.lastbuildstate
